--- a/package.json
+++ b/package.json
@@ -25,11 +25,14 @@
     "cli-app",
     "mac",
     "osx",
+    "screen saver",
     "screensaver",
-    "screen saver"
+    "windows"
   ],
   "dependencies": {
-    "meow": "^3.3.0"
+    "meow": "^3.3.0",
+    "osx-screensaver": "^1.0.0",
+    "win-screensaver": "^1.0.1"
   },
   "devDependencies": {
     "ava": "^0.0.4"
